Implemented revenue model
